syntax = "proto3";

package jobworkerp.data;

import "jobworkerp/data/common.proto";

message RunnerSchemaData {
    // schema name (unique key, proto message prefix: e.g. operation_proto: "CommandOperation", job_arg_proto: "CommandArg")
    string name = 1;
    // runner type (0: command, 1: docker, 2: plugin...)
    jobworkerp.data.OperationType operation_type = 2;
    // proto message definition. must use this.name as message type prefix (e.g. "message CommandOperation{ string name = 1; }")
    string operation_proto = 3;
    // proto message definition. must use this.name as message type prefix (e.g. "message CommandArg{ repeated string args = 1; }")
    string job_arg_proto = 4;
}

message RunnerSchemaId {
    int64 value = 1;
}

message RunnerSchema {
  RunnerSchemaId id = 1;
  RunnerSchemaData data = 2;
}
