syntax = "proto3";

package jobworkerp.service;

message SuccessResponse {
    bool is_success = 1;
}

message FindListRequest {
    optional int32 limit  = 1;
    optional int64 offset = 2;
}

// XXX now empty...
message CountCondition {

}

message CountResponse {
    int64 total = 1;
}